--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,11 @@ html {
   
   .hero-image-container h4 {
      font-family: "Lato", sans-serif;
-     font-weight: 200;
+     font-weight: 100;
      font-size: 40px;
      padding-left: 0;
-     margin-bottom: 10px;
+     padding-bottom: 15px;
+     margin-bottom: 0px;
      letter-spacing: 2px;
      word-spacing: 4px;
      color:#dde0e5;
@@ -53,6 +54,10 @@ html {
      text-decoration: none!important;
  }
 
+  
+
+
+
 
  /* ---------------------------------- SOCIAL LINKS ------------------- */
 
@@ -67,6 +72,8 @@ html {
 .footer ul li a:hover {
     color:white;
     }
+
+
 
 
 /* ---------------------------------- Hero-image / Section1 ------------------- */
@@ -107,29 +114,42 @@ footer {
 
  
 
- /* ---------  Tour section ---------   */
-
+ /* ---------  Tour section --------- */
+ 
  .tour {
      background: none; 
      color: #343a40;
      padding-top: 10px;
- }
+     text-align: center;
+ }  
 
  .tour h2 {
-     text-align: center;
-     padding-top: 7px;
+     padding: 10px 0;
      font-size: 30px;
  }
 
- .container {
-     padding-bottom: 20px;
- }
+tr {
+     border-bottom: 0.5px solid #343a40;
+     border-collapse: collapse;
+}
 
- .row {
-     padding-top: 5px;
-     padding-bottom: 5px;
+td {
+    padding: 15px 100px;
+    text-align: left;
+    color: #343a40;
+    border-bottom-width: 50%;
 
- }
+
+}
+
+/* code to center table element from: https://www.granneman.com/webdev/coding/css/centertables */
+
+table {
+    width: 80%; 
+    margin-left:10%; 
+    margin-right:10%;
+    font-size: 20px;
+}
 
  .ticket {
     text-decoration: none!important;
@@ -141,15 +161,22 @@ footer {
  }
 
 
+/* --- GALLERY SECTION --- */
+
+
+
+
+
+
+
 
 /* --- NEWS SECTION --- */
 .news{
-    background-color:#bfcbd6;
     text-align: center;
 }
 
  .news h2 {
-     padding-top: 10px;
+     padding: 30px 0 15px;
      text-align: center;
  }
 
