--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html {
   .hero-image-container h4 {
      font-family: "Lato", sans-serif;
      font-weight: 100;
-     font-size: 40px;
+     font-size: 35px;
      padding-left: 0;
      padding-bottom: 15px;
      margin-bottom: 0px;
@@ -47,14 +47,14 @@ html {
  /* ---------------------------------- SOCIAL LINKS ------------------- */
 
 
-.footer ul li a {
+.header ul li a {
     color:grey;
     padding-right: 5px;
     font-size: 23px;
     padding-bottom: 0;
 } 
 
-.footer ul li a:hover {
+.header ul li a:hover {
     color:white;
     }
 
@@ -68,7 +68,7 @@ html {
     background-repeat: no-repeat; 
     background-attachment: fixed;
     background-size: cover;
-    background-position: 80% 65%; 
+    background-position: 75% 65%; 
     padding-top: 160px;
     padding-bottom: 55%;
     } 
@@ -78,23 +78,28 @@ html {
  }
 
   .navi-links li a {
-     padding-left: 10px;
-     padding-bottom: 0;
+     padding-left: 8px;
+     padding: 0;
      text-decoration: none!important;
+ }
+
+ .navbar .fixed-top .navbar-dark .bg-dark {
+     padding: 0px;
  }
 
 
 
 
 /* ---------------------------------- QUOTES SECTION ------------------- */
-/*
+
 #quotes {
-    width: 40%;
+    width: 45%;
     text-align: left;
+    padding-top: 15%;
 }
 
 .index-page-quotes p {
-    font-size: 15px;
+    font-size: 20px;
     font-family: "Gotu", sans-serif;
 }
 
@@ -104,7 +109,7 @@ html {
 
 footer {
     padding-top: 0;
-} */
+}
 
 
 
@@ -166,15 +171,17 @@ table {
 
 
 
-/* --- NEWS SECTION --- */
-.news{
-    text-align: center;
-}
+/* --- ABOUT US SECTION --- */
 
- .news h2 {
+.about-us h2 {
      padding: 30px 0 15px;
      text-align: center;
  }
+ 
+
+.news-div {
+    text-align: center;
+}
 
 .form {
     display: inline;
