--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 
@@ -177,10 +178,23 @@ table {
      padding: 30px 0 15px;
      text-align: center;
  }
- 
+
+
+/* -- Code on centering from: https://www.w3schools.com/howto/howto_css_image_center.asp -- */
+
+.band-img1 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+
+/* ------ About us -- news (sub for updates) section ---- */
 
 .news-div {
     text-align: center;
+    padding-top: 30px;
 }
 
 .form {
