--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,11 @@ table {
     width: 50%;
 }
 
+.about-description {
+    width: 50%;
+    text-align: left;
+}
+
 
 /* ------ About us -- news (sub for updates) section ---- */
 
