Added more information to 'Existing features' and 'Technologies used' sections of the readme file

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,17 @@ table {
     width: 70%;
     padding-top: 10px;
 }
+
+.music {
+    color: purple;
+    text-decoration: none!important;
+}
+
+.music:hover {
+    font-weight: 600;
+    color: purple;
+}
+
 iframe {
     text-align: center;
     width: 70%;
