--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:100,200,300,400,500|Gotu:100,200,300,400,500');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,500,600|Lora:400,500,600&display=swap');
 
 body {
     background-size: cover;
@@ -15,7 +15,7 @@ html {
   
   .navbar-brand {
      font-family: "Lato", sans-serif;
-     font-weight: 100;
+     font-weight: 400;
      font-size: 30px;
      letter-spacing: 2px;
      word-spacing: 2px;
@@ -67,7 +67,7 @@ html {
     background-size: cover;
     background-position: 65% 65%; 
     padding-top: 160px;
-    padding-bottom: 55%;
+    padding-bottom: 20%;
     } 
 
   
@@ -79,7 +79,7 @@ html {
     width: 55%;
     text-align: left;
     padding-top: 18%;
-    padding-left: 9px;
+    padding-left: 35px;
 }
 
 
@@ -90,7 +90,8 @@ html {
 
 .index-page-quotes p {
     font-size: 20px;
-    font-family: "Gotu", sans-serif;
+    font-family: "Lora", sans-serif;
+    font-weight: 400;
     padding-left: 7px;
 }
 
@@ -108,6 +109,10 @@ footer {
 
  /* ---------  Tour section (SECTION 2) --------- */
  
+ #section2 {
+     padding-top: 50px;
+ }
+
  .tour {
      background: none; 
      color: #343a40;
@@ -147,6 +152,7 @@ table {
  .ticket {
     text-decoration: none!important;
     color: rgb(163, 0, 163);
+    font-weight: 600;
  }
 
  .ticket:hover {
@@ -154,10 +160,12 @@ table {
  }
 
 
-
-
-
 /* --- ABOUT-US (SECTION 3)--- */
+
+#section3 {
+    background-color: #dde1e4;
+    padding-top: 50px;
+}
 
 .about-us h2 {
     font-family: "Lato", sans-serif;
@@ -167,10 +175,11 @@ table {
  }
 
 .band-img1 {
+    padding-top: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 65%;
 }
 
 .about-description {
@@ -180,31 +189,27 @@ table {
 }
 
 .music {
-    color: purple;
+    color: #a01ca0;
     text-decoration: none!important;
 }
 
 .music:hover {
     font-weight: 600;
-    color: purple;
+    color: #a01ca0;
 }
 
 iframe {
     text-align: center;
-    width: 70%;
+    width: 75%;
     padding-left: 25%;
 }
 
-/* ------ News section ---- */
-
-.news-div {
-    text-align: center;
-    padding: 25px 0;
-}
-
-
 
 /* --- GALLERY (SECTION) --- */
+
+#section4 {
+     padding-top: 75px;
+ }
 
 .gallery-header h2 {
     font-size: 25px;
@@ -218,7 +223,7 @@ iframe {
     clear: none;
     line-height: 0px;
     column-count: 3;
-    column-gap: 0px;
+    column-gap: 0;
 }
 
 .gallery-picture img {
@@ -226,37 +231,86 @@ iframe {
 }
 /* --- end --- */
 
-.gal-image:hover {
-    transform: scale(1.3, 1.3);
+.gallery-picture img:hover {
+    transform: scale(1.3, 1.3)
 }
 
 
+/* ------ News section ---- */
 
+#section5 {
+        text-align: center;
+
+}
+
+.news-div {
+    padding: 35px 0;
+}
+
+input[type=email] {
+    border: 1px solid #a01ca0;
+}
+
+::placeholder {
+    color: grey;
+    text-decoration: none!important;
+
+    }
+
+input.email-input {
+    margin-bottom: 3px;
+}
+
+
+button.subscribe-btn {
+    background-color: transparent;
+    color: #a01ca0;
+    border: 1px solid #a01ca0;
+    display: block;
+    margin: 0 auto;
+}
+
+button.subscribe-btn:hover {
+    background-color: #a01ca0;
+    color: #fff;
+    }
 
 
 /* ------ Footer section ---- */
 
 
-#section5 {
+#section6 {
     background-color: #343a40;
 }
 
 .footer {
-    padding: 5px 0;
+    padding: 0;
 }
 
-.socials h6 {
+.end-page-footer h6 {
     color: white;
-    padding: 2px 15px;
+    padding: 20px 15px;
     font-size: 15px;
 }
 
 .end-page-footer {
-    height: 62px;
+    height: 55px;
     display: flex;
     justify-content: center;
 }
 
+
+@media and mAKE FULL SCREEN FOR MOBILE {
+    
+}
+
+@media only screen and (max-width: 640px) {
+  iframe {
+        width: 100%;
+        padding: 5px;
+        margin: 0;
+    }
+}
 
 
 
