--- a/css/style.css
+++ b/css/style.css
@@ -163,9 +163,10 @@ table {
 /* --- ABOUT-US (SECTION 3)--- */
 
 #section3 {
-    background-color: #dde1e4;
     padding-top: 50px;
+    background-image: linear-gradient(#fff, #dde1e4, #fff)
 }
+
 
 .about-us h2 {
     font-family: "Lato", sans-serif;
@@ -175,11 +176,15 @@ table {
  }
 
 .band-img1 {
-    padding-top: 10px;
+    padding-top: 30px;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 65%;
+}
+
+.band-img1:hover {
+    transform: scale(1.3, 1.3)
 }
 
 .about-description {
@@ -214,25 +219,27 @@ iframe {
 .gallery-header h2 {
     font-size: 25px;
     text-align: center;
+    padding-bottom: 15px;
 }
 
+/* --- Code referenced from https://www.w3schools.com/ - responsive image grid section ---*/
 
-/* --- Code referenced from repl.it project worked previously --- */
-
-.gallery-picture {
-    clear: none;
-    line-height: 0px;
-    column-count: 3;
-    column-gap: 0;
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 5px;
 }
 
-.gallery-picture img {
+.column {
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 3px;
+}
+
+.column img {
+    vertical-align: middle;
     width: 100%;
-}
-/* --- end --- */
-
-.gallery-picture img:hover {
-    transform: scale(1.3, 1.3)
+    padding: 2px 0;
 }
 
 
@@ -300,16 +307,16 @@ button.subscribe-btn:hover {
 }
 
 
-@media and mAKE FULL SCREEN FOR MOBILE {
-    
-}
-
 @media only screen and (max-width: 640px) {
   iframe {
         width: 100%;
         padding: 5px;
         margin: 0;
     }
+
+ .gallery-picture {
+    column-count: 2;
+}
 }
 
 
