--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ table {
  }
 
 .band-img1 {
-    padding-top: 30px;
+    padding: 30px 0 40px;
     display: block;
     margin-left: auto;
     margin-right: auto;
